@@ -1,3 +1,4 @@
+Build a Fraction: Only show the "add container" button if there is at least one fraction > 1
 Fraction Matcher: Added documentation to Vector2D class, see #3357
 Fraction Matcher: Added documentation for Controller class, see #3357
 Fraction Matcher: Added documentation for FNode class, see #3357
